--- a/app/login.html
+++ b/app/login.html
@@ -12,6 +12,22 @@
 </head>
 <body>
 	<div id="wrap">
+		<header id="header"></header>
+		<!-- /#header -->
+		<aside id="aside">
+			<div class="aside-head">
+				<div class="logo">
+					<a href="#">
+						<img src="img/logo.png" alt="Sleek">
+					</a>
+				</div>
+				<!-- /.logo -->
+				<div class="menu-btn"></div>
+				<!-- /.menu-btn -->
+			</div>
+			<!-- /.aside-head -->
+		</aside>
+		<!-- /#aside -->
 		<div class="wrapper d-flex align-items-center">
 			<div class="auth-container mx-auto">
 				<div class="auth-head d-flex justify-content-between align-items-center flex-wrap">
@@ -21,52 +37,97 @@
 					</div>
 					<!-- /.auth-head-title-container -->
 					<div class="form-display-controls d-flex">
-						<button class="display-control-btn">Sign in</button>
-						<button class="display-control-btn active">Sign up</button>
+						<ul id="loginTab" class="nav" role="tablist">
+							<li	class="nav-item"><a href="#signIn" class="display-control-btn active" id="signInTab" data-toggle="tab" role="tab" aria-controls="signIn" aria-selected="true">Sign in</a></li>
+							<li	class="nav-item"><a href="#signUp" class="display-control-btn" id="signUpTab" data-toggle="tab" role="tab" aria-controls="signUp" aria-selected="false">Sign up</a></li>
+						</ul>
 					</div>
 					<!-- /.form-display-controls -->
 				</div>
 				<!-- /.auth-head -->
-				<div class="auth-body">
-					<form name="sign-up">
-						<div class="form-group">
-							<label for="username">Your username</label>
-							<input type="text" name="username" class="form-control" id="username">
-						</div>
-						<!-- /.form-group -->
-						<div class="form-group">
-							<label for="email">Your Email Address</label>
-							<input type="email" name="email" class="form-control" id="email">
-						</div>
-						<!-- /.form-group -->
-						<div class="form-group">
-							<label for="password">Your password</label>
-							<input type="password" name="password" class="form-control" id="password">
-						</div>
-						<!-- /.form-group -->
-						<div class="form-group">
-							<label for="repeat-password">Repeat your password</label>
-							<input type="password" name="repeat-password" class="form-control" id="repeat-password">
-						</div>
-						<!-- /.form-group -->
-						<div class="checkbox-group">
-							<input type="checkbox" name="agree-terms" id="agree-terms">
-							<label for="agree-terms">I agree to all <a href="#">Terms</a></label>
-						</div>
-						<!-- /.checkbox-group -->
-						<div class="form-footer d-flex align-items-center">
-							<button class="submit-btn"> 
-								<span>Sign up</span>	
-							</button>
-							<nav class="social ml-auto ">
-								<a href="#" class="social-icon fb"><i class="fab fa-facebook-f"></i></a>
-								<a href="#" class="social-icon google"><i class="fab fa-google-plus-g"></i></a>
-								<a href="#" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
-							</nav>
-							<!-- /.social -->
-						</div>
-						<!-- /.form-footer -->
-					</form>
+				<div id="loginTabContent" class="auth-body tab-content">
+					<div id="signIn" class="tab-pane fade show active" role="tabpanel" aria-labelledby="signInTab">
+						<form name="sign-in">
+							<div class="form-group">
+								<label for="username">Your username</label>
+								<input type="text" name="username" class="form-control" id="username">
+							</div>
+							<!-- /.form-group -->
+							<div class="form-group">
+								<label for="email">Your Email Address</label>
+								<input type="email" name="email" class="form-control" id="email">
+							</div>
+							<!-- /.form-group -->
+							<div class="form-group">
+								<label for="password">Your password</label>
+								<input type="password" name="password" class="form-control" id="password">
+							</div>
+							<!-- /.form-group -->
+							<div class="form-group">
+								<label for="repeat-password">Repeat your password</label>
+								<input type="password" name="repeat-password" class="form-control" id="repeat-password">
+							</div>
+							<!-- /.form-group -->
+							<div class="checkbox-group">
+								<input type="checkbox" name="agree-terms" id="agree-terms">
+								<label for="agree-terms">I agree to all <a href="#">Terms</a></label>
+							</div>
+							<!-- /.checkbox-group -->
+							<div class="form-footer d-flex align-items-center">
+								<button class="submit-btn"> 
+									<span>Sign in</span>	
+								</button>
+								<nav class="social ml-auto ">
+									<a href="#" class="social-icon fb"><i class="fab fa-facebook-f"></i></a>
+									<a href="#" class="social-icon google"><i class="fab fa-google-plus-g"></i></a>
+									<a href="#" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
+								</nav>
+								<!-- /.social -->
+							</div>
+							<!-- /.form-footer -->
+						</form>
+					</div>
+					<div id="signUp" class="tab-pane fade" role="tabpanel" aria-labelledby="signUpTab">
+						<form name="sign-up">
+							<div class="form-group">
+								<label for="username">Your username</label>
+								<input type="text" name="username" class="form-control" id="username">
+							</div>
+							<!-- /.form-group -->
+							<div class="form-group">
+								<label for="email">Your Email Address</label>
+								<input type="email" name="email" class="form-control" id="email">
+							</div>
+							<!-- /.form-group -->
+							<div class="form-group">
+								<label for="password">Your password</label>
+								<input type="password" name="password" class="form-control" id="password">
+							</div>
+							<!-- /.form-group -->
+							<div class="form-group">
+								<label for="repeat-password">Repeat your password</label>
+								<input type="password" name="repeat-password" class="form-control" id="repeat-password">
+							</div>
+							<!-- /.form-group -->
+							<div class="checkbox-group">
+								<input type="checkbox" name="agree-terms" id="agree-terms">
+								<label for="agree-terms">I agree to all <a href="#">Terms</a></label>
+							</div>
+							<!-- /.checkbox-group -->
+							<div class="form-footer d-flex align-items-center">
+								<button class="submit-btn"> 
+									<span>Sign up</span>	
+								</button>
+								<nav class="social ml-auto ">
+									<a href="#" class="social-icon fb"><i class="fab fa-facebook-f"></i></a>
+									<a href="#" class="social-icon google"><i class="fab fa-google-plus-g"></i></a>
+									<a href="#" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
+								</nav>
+								<!-- /.social -->
+							</div>
+							<!-- /.form-footer -->
+						</form>
+					</div>
 				</div>
 				<!-- /.auth-body -->
 			</div>
